# cil-aws-kiro-hackathon

./: .env  .env.example  .env.template  .gitignore  AURA-COMPLETE-CAPABILITIES.md  AURA-FULL-CAPABILITIES-COMPLETE.md  AUTOMATION-FEATURES.md  CHANGELOG.md  CHECK-SETUP.bat  CLEAN-START-DESKTOP.bat  CLEAN-TEST-FILES.bat  CLOUD-TESTING.md  COMPETITION-READY.md  COMPLETE-SETUP.md  CONTINUE-SETUP.bat  CONTRIBUTING.md  DIAGNOSE-AND-FIX.py  FINAL-DESKTOP-TEST.bat  FINAL-HACKATHON-TEST.py  FINAL-TEST.py  FINAL-VALIDATION-TEST.py  FIX-FILE-PERMISSIONS.bat  FIX-FRONTEND-UI-NOW.bat  FIX-OCR-AND-IMPORTS.bat  FIX-OCR-PARSING-FINAL.bat  FIXES-COMPLETED.md  HACKATHON-READY-START.bat  IMPROVE-VOICE-WEB.bat  INSTALL-BUILD-TOOLS.bat  INSTALL-VISUAL-STUDIO.md  JUDGES-DEMO-COMPLETE.bat  JUDGES-DEMO-GUIDE.md  JUDGES-README.md  KILL-AND-RESTART.bat  LAUNCH-DESKTOP-DEMO.bat  LAUNCH-FRONTEND.bat  MCP_SETUP.md  PERFECT-DEMO-START.bat  PRIVACY.md  PROFESSIONAL_STANDARDS_SUMMARY.md  (+57 more)
.github/: PULL_REQUEST_TEMPLATE.md  changelog-config.json  dependabot.yml
backend/: .env.example  Dockerfile  README.md  __init__.py  config.py  docker-compose.yml  hf_client.py  main.py  main_backup.py  main_clean.py  pyvenv.cfg  requirements-automation.txt  requirements-minimal.txt  requirements-test.txt  requirements.txt  run.py
data/: test-config.json  user_preferences.json
documents/: aura-technical-overview.md  demo-document.txt  quarterly-results.xlsx  sample-budget.csv  sample-budget.xlsx
local-test/: README.md  check-prerequisites.bat  (+29 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+132 files in other folders)
