[package]
name = "aura-desktop-assistant"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "aura-desktop-assistant"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "window-unmaximize", "window-set-focus", "window-start-dragging", "fs-read-file", "window-hide", "window-close", "fs-write-file", "fs-remove-dir", "window-show", "fs-copy-file", "path-all", "window-minimize", "dialog-open", "fs-create-dir", "dialog-save", "fs-rename-file", "fs-remove-file", "window-set-always-on-top", "shell-open", "window-maximize", "window-unminimize", "os-all", "fs-read-dir", "fs-exists", "global-shortcut-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
